<resources>
    <string name="app_name">Pathfinder Combat Helper</string>
    <string name="contact_me_email">Contact me at: info\@rekijan.nl</string>
    <string name="email_button">Send email</string>
    <string name="error_title">Error occurred</string>
    <string name="error_email_subject">Error report for</string>
    <string name="error_surveyName">Oops, looks like you discovered a bug. \n\nE-mail me at info\@rekijan.nl and mention which question you were at and which answer you picked.</string>
    <string name="app_icon">App icon</string>
    <string name="question_icon">Question icon</string>
    <string name="answer_icon">Answer icon</string>
    <string name="note_icon">Note icon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="start_fragment_text">Open the navigation drawer to select a topic</string>
    <string name="navigation_category_cmb">Combat maneuvers</string>
    <string name="navigation_category_other">Other</string>
    <string name="cmb_bull_rush">Bull Rush</string>
    <string name="cmb_dirty_trick">Dirty Trick</string>
    <string name="cmb_disarm">Disarm</string>
    <string name="cmb_drag">Drag</string>
    <string name="cmb_grapple">Grapple</string>
    <string name="cmb_overrun">Overrun</string>
    <string name="cmb_reposition">Reposition</string>
    <string name="cmb_steal">Steal</string>
    <string name="cmb_sunder">Sunder</string>
    <string name="poison">Poison</string>
    <string name="action_settings">Settings</string>
    <string name="pref_sub_item_title">Manage sub-items</string>
    <string name="pref_sub_item_summary">Opens a new screen</string>
    <string name="pref_category_summary_enabled">Enabled</string>
    <string name="pref_category_summary_disabled">Disabled (sub-items also disabled)</string>
    <string name="pref_category_title">Category</string>
    <string name="notes_title">Notes</string>
    <string name="note_grapple_condition">Read more about the grappled condition.</string>
    <string name="condition_grappled_title">Grappled Condition</string>
    <string name="condition_grappled_message">
        Grappled creatures cannot move and take a –4 penalty to Dexterity, a –2 penalty on all attack rolls and combat maneuver checks, except those made to grapple or escape a grapple.
        \nA grappled creatures can take no action that requires two hands to perform, and they cannot make attacks of opportunity.
        \n \nCasting Spells while Grappled/Grappling: \nThe only spells which can be cast while grappling or pinned are those without somatic components and whose material components (if any) you have in hand.
        \nEven so, you must make a concentration check (DC 10 + the grappler\'s CMB + the level of the spell you\'re casting) or lose the spell.
        \n \nA grappled creature cannot use Stealth to hide from the creature grappling it, even if a special ability, such as hide in plain sight, would normally allow it to do so.
        \nIf a grappled creature becomes invisible, through a spell or other ability, it gains a +2 circumstance bonus on its CMD to avoid being grappled, but receives no other benefit.
    </string>
    <string name="condition_tied_up_title">What does being tied up mean?</string>
    <string name="condition_tied_up_message">A creature that is tied up is "bound" which means it has the Helpless condition.
        \nA helpless target is treated as having a Dex of 0 (–5 modifier). Melee attacks against a helpless target get a +4 bonus (equivalent to attacking a prone target).
        \nRanged attacks get no special bonus against helpless targets. Creatures with the sneak attack ability can sneak attack helpless targets.</string>
    <string name="note_pinned_condition">Read more about the pinned condition.</string>
    <string name="condition_pinned_title">Pinned Condition</string>
    <string name="condition_pinned_message">A pinned creature cannot move and is denied its Dexterity bonus, gets a -4 penalty to AC.
    \n \nA pinned creature can take verbal and mental actions, but cannot cast spells that require a somatic or material component.
    \n \nA pinned creature that attempts to cast a spell must make a concentration  check (DC 10 + grappler\'s CMB + spell level) or lose the spell.
    \n \nPinned is a more severe version of grappled, and their effects do not stack.</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="answer_continue">Continue</string>
    <string name="answer_success">Success</string>
    <string name="answer_fail">Fail</string>
    <string name="note_standard_action">Doing this normally takes a standard action</string>
    <string name="note_free_action">Doing this normally takes a free action</string>
    <string name="grapple_question_start">Which situation applies?</string>
    <string name="grapple_answer_start_self">I want to start a grapple on my opponent.</string>
    <string name="grapple_answer_start_grappled">It\'s my turn and my opponent is grappling me.</string>
    <string name="grapple_answer_start_grappling">It\'s my turn and I am grappling my opponent.</string>
    <string name="grapple_note_start_action">Normally starting a grapple is a standard action.</string>
    <string name="grapple_question_avoid_aoo">Do you have Improved Grapple feat, the Grab ability, or another way to avoid provoking an Attack of Opportunity?</string>
    <string name="grapple_note_improved_grapple">Improved grapple gives +2 on checks made to grapple a foe and means you don\'t provoke.</string>
    <string name="grapple_note_grab">Grab can be used after a natural attack as a free action, does not provoke and gets a +4 bonus. Read more.</string>
    <string name="grapple_dialog_grab_title">Special attack: Grab (Ex)</string>
    <string name="grapple_dialog_grab_message">If a creature with this special attack hits with the indicated attack (usually a claw or bite attack), it deals normal damage and attempts to start a grapple as a free action without provoking an attack of opportunity.
        Unless otherwise noted, grab can only be used against targets of a size equal to or smaller than the creature with this ability. If the creature can use grab on creatures of other sizes, it is noted in the creature\'s Special Attacks line.
        The creature has the option to conduct the grapple normally, or simply use the part of its body it used in the grab to hold the opponent. If it chooses to do the latter, it takes a –20 penalty on its CMB check to make and maintain the grapple,
        but does not gain the grappled condition itself. A successful hold does not deal any extra damage unless the creature also has the constrict special attack. If the creature does not constrict,
        each successful grapple check it makes during successive rounds automatically deals the damage indicated for the attack that established the hold. Otherwise, it deals constriction damage as well (the amount is given in the creature’s descriptive text).
        \n \nCreatures with the grab special attack receive a +4 bonus on combat maneuver checks made to start and maintain a grapple.</string>
    <string name="grapple_question_provoked">You provoked an Attack of Opportunity. Does it hit?</string>
    <string name="grapple_question_provoked_hit">You take damage from the attack normally and apply that damage as a penalty to your CMB roll.</string>
    <string name="grapple_question_cmb_roll">Roll your CMB vs the defender\'s CMD</string>
    <string name="grapple_note_cmb_roll">Humanoid creatures without two free hands attempting to grapple a foe take a –4 penalty on the combat maneuver roll.</string>
    <string name="grapple_question_grapple_fails">Grapple fails. The action is wasted. And neither party is considered grappled.</string>
    <string name="grapple_question_adjacent">Is your target adjacent to you?</string>
    <string name="grapple_question_adjacent_available">Is an open adjacent space available?</string>
    <string name="grapple_question_move_adjacent">Choose an open adjacent square next to you to move your target into.</string>
    <string name="grapple_question_attacker_grappled">You have successfully grappled your opponent</string>
    <string name="grapple_success_note">You and your opponent both gain the grappled condition. As long as you maintain control of the grapple, you can release the grapple with a free action.</string>
    <string name="grapple_success_note_bonus">If your target does not break the grapple, you get a +5 circumstance bonus on grapple checks made against the same target in subsequent rounds.</string>
    <string name="grapple_question_defend_start">Are you pinned?</string>
    <string name="grapple_question_pinned">Do you want to try and free yourself?</string>
    <string name="grapple_answer_pinned_cast">No, I want to try and cast a spell or spell-like ability</string>
    <string name="grapple_question_pinned_cast">I am pinned and want to cast a spell or a spell-like ability</string>
    <string name="grapple_question_defend_start_choose">You are grappled. What do you want to do?</string>
    <string name="grapple_note_defending">You \'t take any action that requires two hands. Spells can\'t have a somatic component, and any material component you have to have in hand.</string>
    <string name="grapple_question_free_yourself">To free yourself roll a CMB check or Escape Artist check versus the attackers CMD.</string>
    <string name="grapple_answer_free_myself">I want to try and free myself</string>
    <string name="grapple_answer_control">I want to attempt to become the controlling grappler</string>
    <string name="grapple_question_control">To take control roll a CMB check or Escape Artist check versus the attackers CMD.</string>
    <string name="grapple_question_failed_cmd">Both parties continue to have the grappled condition. The attacker is still controlling the grapple.</string>
    <string name="grapple_question_defender_takes_control">You are now the controlling grappler, and get the +5 bonus to successive checks to maintain the grapple.</string>
    <string name="grapple_question_defender_escapes">You escape. Both parties lose the grappled condition.</string>
    <string name="grapple_answer_attack_grappled">I am grappled but want to attack</string>
    <string name="grapple_question_attack">You can attack or full attack with a light or one-handed weapon.</string>
    <string name="grapple_note_attack">These attacks get a -2 penalty to hit.</string>
    <string name="grapple_note_attack_range">You may attack any target in your reach.</string>
    <string name="grapple_answer_cast">I want to cast a spell or spell-like ability.</string>
    <string name="grapple_question_cast">I want to cast a spell or spell-like ability.</string>
    <string name="grapple_note_cast_restriction">You can only cast a spell without somatic components, and if it has a material component you have to have it in hand.</string>
    <string name="grapple_note_cast_check">Make a concentration check (DC10 + grappler\'s CMB + spell level) or lose the spell. </string>
    <string name="grapple_question_grappling_choose">You are controlling the grapple. What do you want to do?</string>
    <string name="grapple_answer_release_grapple">I want to release the grapple (free action)</string>
    <string name="grapple_question_release">Both parties lose the grappled condition</string>
    <string name="grapple_answer_tie_up">I want to tie up my opponent</string>
    <string name="grapple_question_tie_easy">Is your opponent pinned, restrained, or unconscious?</string>
    <string name="grapple_question_tie_up">You tie up your opponent.</string>
</resources>