<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/navigation_category_cmb">
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_nc_cmb"
            android:summaryOff="@string/pref_category_summary_disabled"
            android:summaryOn="@string/pref_category_summary_enabled"
            android:title="@string/pref_category_title" />
        <PreferenceScreen
            android:key="button_nc_cmb"
            android:persistent="false"
            android:summary="@string/pref_sub_item_summary"
            android:title="@string/pref_sub_item_title">
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_bull_rush"
                android:title="@string/cmb_bull_rush" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_dirty_trick"
                android:title="@string/cmb_dirty_trick" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_disarm"
                android:title="@string/cmb_disarm" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_drag"
                android:title="@string/cmb_drag" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_grapple"
                android:title="@string/cmb_grapple" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/navigation_category_other">
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_nc_other"
            android:summaryOff="@string/pref_category_summary_disabled"
            android:summaryOn="@string/pref_category_summary_enabled"
            android:title="@string/pref_category_title" />
        <PreferenceScreen
            android:key="button_nc_other"
            android:persistent="false"
            android:summary="@string/pref_sub_item_summary"
            android:title="@string/pref_sub_item_title">
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_poison"
                android:title="@string/poison" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>